nlp/nlpql/nlpql_parserParser.py
# Generated from nlpql_parser.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class nlpql_parserParser ( Parser ):

    grammarFileName = "nlpql_parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'debug'", "'default'", "'final'", "'phenotype'", 
                     "'version'", "'description'", "'datamodel'", "'include'", 
                     "'called'", "'code'", "'codesystem'", "'valueset'", 
                     "'termset'", "'documentset'", "'cohort'", "'population'", 
                     "'define'", "'context'", "'minimum_value'", "'maximum_value'", 
                     "'enum_list'", "'limit'", "'output_feature_matrix'", 
                     "'OMOP'", "'ClarityCore'", "'OHDSIHelpers'", "'All'", 
                     "'Patient'", "'Document'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'>'", "'<'", "'<='", "'>='", 
                     "'=='", "<INVALID>", "<INVALID>", "<INVALID>", "'!='", 
                     "'!'", "'+'", "'-'", "'*'", "'/'", "'^'", "'%'", "';'", 
                     "':'", "'.'", "','", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'" ]

    symbolicNames = [ "<INVALID>", "DEBUG", "DEFAULT", "FINAL", "PHENOTYPE_NAME", 
                      "VERSION", "DESCRIPTION", "DATAMODEL", "INCLUDE", 
                      "CALLED", "CODE", "CODE_SYSTEM", "VALUE_SET", "TERM_SET", 
                      "DOCUMENT_SET", "COHORT", "POPULATION", "DEFINE", 
                      "CONTEXT", "MIN_VALUE", "MAX_VALUE", "ENUM_LIST", 
                      "LIMIT", "OUTPUT_FEATURE_MATRIX", "OMOP", "CLARITY_CORE", 
                      "OHDSI_HELPERS", "ALL", "PATIENT", "DOCUMENT", "WHERE", 
                      "AND", "OR", "NOT", "GT", "LT", "LTE", "GTE", "EQUAL", 
                      "IS", "LIKE", "BETWEEN", "NOT_EQUAL", "BANG", "PLUS", 
                      "MINUS", "MULT", "DIV", "CARET", "MOD", "SEMI", "COLON", 
                      "DOT", "COMMA", "L_PAREN", "R_PAREN", "L_BRACKET", 
                      "R_BRACKET", "L_CURLY", "R_CURLY", "DECIMAL", "HEX", 
                      "OCT", "BINARY", "FLOAT", "HEX_FLOAT", "BOOL", "NULL", 
                      "IN", "CHAR", "STRING", "WS", "COMMENT", "LINE_COMMENT", 
                      "IDENTIFIER", "TIME" ]

    RULE_validExpression = 0
    RULE_statement = 1
    RULE_debugger = 2
    RULE_limit = 3
    RULE_version = 4
    RULE_versionValue = 5
    RULE_phenotypeName = 6
    RULE_description = 7
    RULE_dataModel = 8
    RULE_include = 9
    RULE_codeSystem = 10
    RULE_valueSet = 11
    RULE_documentSet = 12
    RULE_termSet = 13
    RULE_cohort = 14
    RULE_population = 15
    RULE_context = 16
    RULE_define = 17
    RULE_defineSubject = 18
    RULE_finalModifier = 19
    RULE_defineName = 20
    RULE_dataEntity = 21
    RULE_operation = 22
    RULE_expression = 23
    RULE_notOperator = 24
    RULE_predicateBoolean = 25
    RULE_predicate = 26
    RULE_nullNotnull = 27
    RULE_expressionAtom = 28
    RULE_unaryOperator = 29
    RULE_logicalOperator = 30
    RULE_comparisonOperator = 31
    RULE_operand = 32
    RULE_methodCall = 33
    RULE_qualifiedName = 34
    RULE_pairMethod = 35
    RULE_pairArray = 36
    RULE_modifiers = 37
    RULE_obj = 38
    RULE_pair = 39
    RULE_identifierPair = 40
    RULE_named = 41
    RULE_array = 42
    RULE_value = 43
    RULE_outputFeatureMatrix = 44

    ruleNames =  [ "validExpression", "statement", "debugger", "limit", 
                   "version", "versionValue", "phenotypeName", "description", 
                   "dataModel", "include", "codeSystem", "valueSet", "documentSet", 
                   "termSet", "cohort", "population", "context", "define", 
                   "defineSubject", "finalModifier", "defineName", "dataEntity", 
                   "operation", "expression", "notOperator", "predicateBoolean", 
                   "predicate", "nullNotnull", "expressionAtom", "unaryOperator", 
                   "logicalOperator", "comparisonOperator", "operand", "methodCall", 
                   "qualifiedName", "pairMethod", "pairArray", "modifiers", 
                   "obj", "pair", "identifierPair", "named", "array", "value", 
                   "outputFeatureMatrix" ]

    EOF = Token.EOF
    DEBUG=1
    DEFAULT=2
    FINAL=3
    PHENOTYPE_NAME=4
    VERSION=5
    DESCRIPTION=6
    DATAMODEL=7
    INCLUDE=8
    CALLED=9
    CODE=10
    CODE_SYSTEM=11
    VALUE_SET=12
    TERM_SET=13
    DOCUMENT_SET=14
    COHORT=15
    POPULATION=16
    DEFINE=17
    CONTEXT=18
    MIN_VALUE=19
    MAX_VALUE=20
    ENUM_LIST=21
    LIMIT=22
    OUTPUT_FEATURE_MATRIX=23
    OMOP=24
    CLARITY_CORE=25
    OHDSI_HELPERS=26
    ALL=27
    PATIENT=28
    DOCUMENT=29
    WHERE=30
    AND=31
    OR=32
    NOT=33
    GT=34
    LT=35
    LTE=36
    GTE=37
    EQUAL=38
    IS=39
    LIKE=40
    BETWEEN=41
    NOT_EQUAL=42
    BANG=43
    PLUS=44
    MINUS=45
    MULT=46
    DIV=47
    CARET=48
    MOD=49
    SEMI=50
    COLON=51
    DOT=52
    COMMA=53
    L_PAREN=54
    R_PAREN=55
    L_BRACKET=56
    R_BRACKET=57
    L_CURLY=58
    R_CURLY=59
    DECIMAL=60
    HEX=61
    OCT=62
    BINARY=63
    FLOAT=64
    HEX_FLOAT=65
    BOOL=66
    NULL=67
    IN=68
    CHAR=69
    STRING=70
    WS=71
    COMMENT=72
    LINE_COMMENT=73
    IDENTIFIER=74
    TIME=75

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ValidExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(nlpql_parserParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nlpql_parserParser.StatementContext)
            else:
                return self.getTypedRuleContext(nlpql_parserParser.StatementContext,i)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_validExpression




    def validExpression(self):

        localctx = nlpql_parserParser.ValidExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_validExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << nlpql_parserParser.DEBUG) | (1 << nlpql_parserParser.DEFAULT) | (1 << nlpql_parserParser.PHENOTYPE_NAME) | (1 << nlpql_parserParser.DESCRIPTION) | (1 << nlpql_parserParser.DATAMODEL) | (1 << nlpql_parserParser.INCLUDE) | (1 << nlpql_parserParser.CODE_SYSTEM) | (1 << nlpql_parserParser.VALUE_SET) | (1 << nlpql_parserParser.TERM_SET) | (1 << nlpql_parserParser.DOCUMENT_SET) | (1 << nlpql_parserParser.COHORT) | (1 << nlpql_parserParser.POPULATION) | (1 << nlpql_parserParser.DEFINE) | (1 << nlpql_parserParser.CONTEXT) | (1 << nlpql_parserParser.LIMIT) | (1 << nlpql_parserParser.OUTPUT_FEATURE_MATRIX) | (1 << nlpql_parserParser.SEMI))) != 0):
                self.state = 90
                self.statement()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self.match(nlpql_parserParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(nlpql_parserParser.SEMI, 0)

        def phenotypeName(self):
            return self.getTypedRuleContext(nlpql_parserParser.PhenotypeNameContext,0)


        def description(self):
            return self.getTypedRuleContext(nlpql_parserParser.DescriptionContext,0)


        def dataModel(self):
            return self.getTypedRuleContext(nlpql_parserParser.DataModelContext,0)


        def include(self):
            return self.getTypedRuleContext(nlpql_parserParser.IncludeContext,0)


        def codeSystem(self):
            return self.getTypedRuleContext(nlpql_parserParser.CodeSystemContext,0)


        def valueSet(self):
            return self.getTypedRuleContext(nlpql_parserParser.ValueSetContext,0)


        def termSet(self):
            return self.getTypedRuleContext(nlpql_parserParser.TermSetContext,0)


        def documentSet(self):
            return self.getTypedRuleContext(nlpql_parserParser.DocumentSetContext,0)


        def cohort(self):
            return self.getTypedRuleContext(nlpql_parserParser.CohortContext,0)


        def population(self):
            return self.getTypedRuleContext(nlpql_parserParser.PopulationContext,0)


        def define(self):
            return self.getTypedRuleContext(nlpql_parserParser.DefineContext,0)


        def context(self):
            return self.getTypedRuleContext(nlpql_parserParser.ContextContext,0)


        def debugger(self):
            return self.getTypedRuleContext(nlpql_parserParser.DebuggerContext,0)


        def limit(self):
            return self.getTypedRuleContext(nlpql_parserParser.LimitContext,0)


        def outputFeatureMatrix(self):
            return self.getTypedRuleContext(nlpql_parserParser.OutputFeatureMatrixContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_statement




    def statement(self):

        localctx = nlpql_parserParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [nlpql_parserParser.PHENOTYPE_NAME]:
                self.state = 98
                self.phenotypeName()
                pass
            elif token in [nlpql_parserParser.DESCRIPTION]:
                self.state = 99
                self.description()
                pass
            elif token in [nlpql_parserParser.DATAMODEL]:
                self.state = 100
                self.dataModel()
                pass
            elif token in [nlpql_parserParser.INCLUDE]:
                self.state = 101
                self.include()
                pass
            elif token in [nlpql_parserParser.CODE_SYSTEM]:
                self.state = 102
                self.codeSystem()
                pass
            elif token in [nlpql_parserParser.VALUE_SET]:
                self.state = 103
                self.valueSet()
                pass
            elif token in [nlpql_parserParser.TERM_SET]:
                self.state = 104
                self.termSet()
                pass
            elif token in [nlpql_parserParser.DOCUMENT_SET]:
                self.state = 105
                self.documentSet()
                pass
            elif token in [nlpql_parserParser.COHORT]:
                self.state = 106
                self.cohort()
                pass
            elif token in [nlpql_parserParser.DEFAULT, nlpql_parserParser.POPULATION]:
                self.state = 107
                self.population()
                pass
            elif token in [nlpql_parserParser.DEFINE]:
                self.state = 108
                self.define()
                pass
            elif token in [nlpql_parserParser.CONTEXT]:
                self.state = 109
                self.context()
                pass
            elif token in [nlpql_parserParser.DEBUG]:
                self.state = 110
                self.debugger()
                pass
            elif token in [nlpql_parserParser.LIMIT]:
                self.state = 111
                self.limit()
                pass
            elif token in [nlpql_parserParser.OUTPUT_FEATURE_MATRIX]:
                self.state = 112
                self.outputFeatureMatrix()
                pass
            elif token in [nlpql_parserParser.SEMI]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 116
            self.match(nlpql_parserParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DebuggerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEBUG(self):
            return self.getToken(nlpql_parserParser.DEBUG, 0)

        def getRuleIndex(self):
            return nlpql_parserParser.RULE_debugger




    def debugger(self):

        localctx = nlpql_parserParser.DebuggerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_debugger)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(nlpql_parserParser.DEBUG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LimitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIMIT(self):
            return self.getToken(nlpql_parserParser.LIMIT, 0)

        def DECIMAL(self):
            return self.getToken(nlpql_parserParser.DECIMAL, 0)

        def getRuleIndex(self):
            return nlpql_parserParser.RULE_limit




    def limit(self):

        localctx = nlpql_parserParser.LimitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_limit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(nlpql_parserParser.LIMIT)
            self.state = 121
            self.match(nlpql_parserParser.DECIMAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VersionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERSION(self):
            return self.getToken(nlpql_parserParser.VERSION, 0)

        def versionValue(self):
            return self.getTypedRuleContext(nlpql_parserParser.VersionValueContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_version




    def version(self):

        localctx = nlpql_parserParser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(nlpql_parserParser.VERSION)
            self.state = 124
            self.versionValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VersionValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(nlpql_parserParser.STRING, 0)

        def getRuleIndex(self):
            return nlpql_parserParser.RULE_versionValue




    def versionValue(self):

        localctx = nlpql_parserParser.VersionValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_versionValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(nlpql_parserParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PhenotypeNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PHENOTYPE_NAME(self):
            return self.getToken(nlpql_parserParser.PHENOTYPE_NAME, 0)

        def STRING(self):
            return self.getToken(nlpql_parserParser.STRING, 0)

        def version(self):
            return self.getTypedRuleContext(nlpql_parserParser.VersionContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_phenotypeName




    def phenotypeName(self):

        localctx = nlpql_parserParser.PhenotypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_phenotypeName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(nlpql_parserParser.PHENOTYPE_NAME)
            self.state = 129
            self.match(nlpql_parserParser.STRING)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==nlpql_parserParser.VERSION:
                self.state = 130
                self.version()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DescriptionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESCRIPTION(self):
            return self.getToken(nlpql_parserParser.DESCRIPTION, 0)

        def STRING(self):
            return self.getToken(nlpql_parserParser.STRING, 0)

        def getRuleIndex(self):
            return nlpql_parserParser.RULE_description




    def description(self):

        localctx = nlpql_parserParser.DescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_description)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(nlpql_parserParser.DESCRIPTION)
            self.state = 134
            self.match(nlpql_parserParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DataModelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATAMODEL(self):
            return self.getToken(nlpql_parserParser.DATAMODEL, 0)

        def OMOP(self):
            return self.getToken(nlpql_parserParser.OMOP, 0)

        def STRING(self):
            return self.getToken(nlpql_parserParser.STRING, 0)

        def version(self):
            return self.getTypedRuleContext(nlpql_parserParser.VersionContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_dataModel




    def dataModel(self):

        localctx = nlpql_parserParser.DataModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dataModel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(nlpql_parserParser.DATAMODEL)
            self.state = 137
            _la = self._input.LA(1)
            if not(_la==nlpql_parserParser.OMOP or _la==nlpql_parserParser.STRING):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==nlpql_parserParser.VERSION:
                self.state = 138
                self.version()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IncludeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCLUDE(self):
            return self.getToken(nlpql_parserParser.INCLUDE, 0)

        def CALLED(self):
            return self.getToken(nlpql_parserParser.CALLED, 0)

        def IDENTIFIER(self):
            return self.getToken(nlpql_parserParser.IDENTIFIER, 0)

        def CLARITY_CORE(self):
            return self.getToken(nlpql_parserParser.CLARITY_CORE, 0)

        def OHDSI_HELPERS(self):
            return self.getToken(nlpql_parserParser.OHDSI_HELPERS, 0)

        def STRING(self):
            return self.getToken(nlpql_parserParser.STRING, 0)

        def version(self):
            return self.getTypedRuleContext(nlpql_parserParser.VersionContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_include




    def include(self):

        localctx = nlpql_parserParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_include)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(nlpql_parserParser.INCLUDE)
            self.state = 142
            _la = self._input.LA(1)
            if not(((((_la - 25)) & ~0x3f) == 0 and ((1 << (_la - 25)) & ((1 << (nlpql_parserParser.CLARITY_CORE - 25)) | (1 << (nlpql_parserParser.OHDSI_HELPERS - 25)) | (1 << (nlpql_parserParser.STRING - 25)))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==nlpql_parserParser.VERSION:
                self.state = 143
                self.version()


            self.state = 146
            self.match(nlpql_parserParser.CALLED)
            self.state = 147
            self.match(nlpql_parserParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CodeSystemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CODE_SYSTEM(self):
            return self.getToken(nlpql_parserParser.CODE_SYSTEM, 0)

        def identifierPair(self):
            return self.getTypedRuleContext(nlpql_parserParser.IdentifierPairContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_codeSystem




    def codeSystem(self):

        localctx = nlpql_parserParser.CodeSystemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_codeSystem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(nlpql_parserParser.CODE_SYSTEM)
            self.state = 150
            self.identifierPair()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueSetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VALUE_SET(self):
            return self.getToken(nlpql_parserParser.VALUE_SET, 0)

        def pairMethod(self):
            return self.getTypedRuleContext(nlpql_parserParser.PairMethodContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_valueSet




    def valueSet(self):

        localctx = nlpql_parserParser.ValueSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_valueSet)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(nlpql_parserParser.VALUE_SET)
            self.state = 153
            self.pairMethod()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DocumentSetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOCUMENT_SET(self):
            return self.getToken(nlpql_parserParser.DOCUMENT_SET, 0)

        def pairMethod(self):
            return self.getTypedRuleContext(nlpql_parserParser.PairMethodContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_documentSet




    def documentSet(self):

        localctx = nlpql_parserParser.DocumentSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_documentSet)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(nlpql_parserParser.DOCUMENT_SET)
            self.state = 156
            self.pairMethod()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermSetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERM_SET(self):
            return self.getToken(nlpql_parserParser.TERM_SET, 0)

        def pairArray(self):
            return self.getTypedRuleContext(nlpql_parserParser.PairArrayContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_termSet




    def termSet(self):

        localctx = nlpql_parserParser.TermSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_termSet)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(nlpql_parserParser.TERM_SET)
            self.state = 159
            self.pairArray()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CohortContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COHORT(self):
            return self.getToken(nlpql_parserParser.COHORT, 0)

        def pairMethod(self):
            return self.getTypedRuleContext(nlpql_parserParser.PairMethodContext,0)


        def getRuleIndex(self):
            return nlpql_parserParser.RULE_cohort




    def cohort(self):

        localctx = nlpql_parserParser.CohortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_cohort)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(nlpql_parserParser.COHORT)
            self.state = 162
            self.pairMethod()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PopulationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POPULATION(self):
            return self.getToken(nlpql_parserParser.POPULATION, 0)

        def IDENTIFIER(self):
            return self.getToken(nlpql_parserParser.IDENTIFIER, 0)

        def DEFAULT(self):
            return self.getToken(nlpql_parserParser.DEFAULT, 0)

        def getRuleIndex(self):
            return nlpql_parserParser.RULE_population




    def population(self):

        localctx = nlpql_parserParser.PopulationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_population)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==nlpql_parserParser.DEFAULT:
                self.state = 164
                self.match(nlpql_parserParser.DEFAULT)


            self.state = 167
            self.match(nlpql_parserParser.POPULATION)
            self.state = 168
            self.match(nlpql_parserParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ContextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTEXT(self):
            return self.getToken(nlpql_parserParser.CONTEXT, 0)

        def PATIENT(self):
            return self.getToken(nlpql_parserParser.PATIENT, 0)

        def DOCUMENT(self):
            return self.getToken(nlpql_parserParser.DOCUMENT, 0)

        def getRuleIndex(self):
            return nlpql_parserParser.RULE_context




    def context(self):
